package com.rockwell.basics.animals;

public interface AnimalWithStripes {

    void hasStripes();
}
