package com.rockwell.basics.animals;

public abstract class Cat extends Mammal {
}
