package com.rockwell.basics.animals;

public abstract class Mammal extends Animal {
}
