package com.rockwell.basics.animals.bird;

import com.rockwell.basics.animals.Animal;

public abstract class Bird extends Animal {

    public abstract void fly();
}
