package com.rockwell.basics.animals.reptile;

import com.rockwell.basics.animals.Animal;

public abstract class Reptile extends Animal {

    public abstract void crawl();
}
